# QMDown

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.py
.github/: renovate.json
.github/workflows/: release.yml
QMDown/: __init__.py  api.py  cli.py  downloader.py  models.py  settings.py
QMDown/extractor/: __init__.py  _abc.py  album.py  singer.py  song.py  songlist.py  top.py
QMDown/handler/: __init__.py  _abc.py  download.py  login.py  metadata.py  url.py
QMDown/languages/zh_CN/LC_MESSAGES/: zh_CN.mo
QMDown/processor/: handler.py
QMDown/utils/: downloader.py  metadata.py  priority.py  progress.py  utils.py
