[project]
name = "qqmusic-downloader"
version = "0.1.0"
description = "QQMusic 下载工具"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "pydantic==2.11.7",
    "qqmusic-api-python==0.3.5",
    "rich-pyfiglet==1.0.0",
    "typer==0.16.0",
]

[project.scripts]
QMDown = "QMDown.__main__:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["Q", "RUF", "C90", "UP", "I", "ASYNC", "C4", "FURB", "R"]
pydocstyle = { convention = "google" }
